# icp_veecerts_contract

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  pnpm-lock.yaml
src/backend/: Cargo.toml  backend.did
src/backend/src/: lib.rs
src/backend/src/assets/: models.rs  mutations.rs  queries.rs  stores.rs
src/backend/src/common/utils/: uuid.rs
src/backend/src/transactions/: accounts.rs  balance.rs  mod.rs
src/backend/src/users/: mod.rs  models.rs  mutations.rs  queries.rs  stores.rs
src/tokens_transfer/: Cargo.toml
src/veecerts_contract_backend/: Cargo.toml  veecerts_contract_backend.did
src/veecerts_contract_backend/src/: lib.rs
src/veecerts_contract_frontend/: package.json
src/veecerts_contract_frontend/src/: App.js
